Bug 1631327 - Do not crash with IPC_FAIL when RecvPredLearn receives a null target URI, we handle it gracefully later, r=valentin,necko-reviewers

Differential Revision: https://phabricator.services.mozilla.com/D77795